fix: fix contrast issue for notification badge

--- a/client/src/css/app.sass
+++ b/client/src/css/app.sass
@@ -5,6 +5,9 @@
 .accent
     background: $accent
 
+.active
+    background: $active
+
 .alert
     background-color: #eee
     border-radius: 4px
@@ -53,6 +56,9 @@ fieldset
 
 .highlight
     background: $highlight
+
+.blu-highlight
+    background: $blu-highlight
 
 .q-tab__label
     font-weight: 400
